# sdnq

./: .gitignore  ablation_fp8_e4m3fn.json  ablation_fp8_e4m3fn_quantized_matmul.json  ablation_int8_dequant_fp32.json  ablation_int8_group64.json  ablation_int8_quantized_matmul.json  ablation_int8_stochastic_rounding.json  ablation_int8_tensorwise.json  ablation_uint4_dequant_fp32.json  ablation_uint4_group64.json  ablation_uint4_per_layer_group_size.json  ablation_uint4_per_layer_svd.json  ablation_uint4_quantized_matmul.json  ablation_uint4_stochastic_rounding.json  ablation_uint4_svd_rank128.json  ablation_uint4_svd_rank32.json  ablation_uint4_tensorwise.json  pyproject.toml  run_ref_tests_phase4.sh
.github/workflows/: lint.yml
docs/: sensitivity-report.md
prompts/: booru.txt  natural.txt
scripts/: analyze_quantization_sensitivity.py  benchmark_inference_quality.py  benchmark_sdnq_inference.py  benchmark_sdnq_inference_full.py  benchmark_sdnq_inference_matmul.py  benchmark_sdnq_training.py  benchmark_sdnq_training_matmul.py  check_moondream_structure.py  debug_moe_quantization.py  dequantize_sdnq_training.py  estimate_config_memory.py  generate_combined_report.py  inspect_quantized_moondream3.py  load_quantized_moondream3_moe.py  quantize_hunyuan3_dynamic.py  quantize_moondream3_int8.py  quantize_moondream3_moe_proper.py  quantize_moondream3_with_moe.py  quantize_pipeline.py  quantize_single_model_dynamic.py  report_template.html  test_quantized_moondream3.py  test_vision_dtype.py
src/sdnq/: __init__.py  common.py  dequantizer.py  file_loader.py  forward.py  loader.py  packed_float.py  quantizer.py  sdnext.py  triton_mm.py
src/sdnq/layers/: __init__.py
src/sdnq/layers/conv/: conv_fp16.py  conv_fp8.py  conv_fp8_tensorwise.py  conv_int8.py
src/sdnq/layers/embedding/: forward.py
src/sdnq/layers/linear/: forward.py  linear_fp16.py  linear_fp8.py  linear_fp8_tensorwise.py  linear_int8.py
src/sdnq/optim/: __init__.py  adafactor.py  adamw.py  came.py  lion.py  muon.py  optimizer.py
src/sdnq/packed_int/: __init__.py
src/sdnq/training/: __init__.py  tensor.py
src/sdnq/training/layers/linear/: forward.py  linear_fp16.py  linear_fp16_ckpt.py  linear_fp16_dynamic.py  linear_fp16_dynamic_ckpt.py  linear_fp8.py  linear_fp8_ckpt.py  linear_fp8_dynamic.py  linear_fp8_dynamic_ckpt.py  linear_fp8_tensorwise.py  linear_fp8_tensorwise_ckpt.py  linear_fp8_tensorwise_dynamic.py  linear_fp8_tensorwise_dynamic_ckpt.py  linear_int8.py  linear_int8_ckpt.py  linear_int8_dynamic.py  linear_int8_dynamic_ckpt.py
